--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,11 @@
 <html>
    <head>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-       <script src="class.js"></script>
+       <script src="class.grass.js"></script>
+       <script src="class.xotaker.js"></script>
+       <script src="class.gishatich.js"></script>
+       <script src="class.bomb.js"></script>
+       <script src="class.tnkox.js"></script>
        <script src="script.js"></script>
    </head>
    <body>
